--- a/backend/Backend/Backend.csproj
+++ b/backend/Backend/Backend.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.RouteAnalyzer" Version="0.5.1" />
     <PackageReference Include="DevExpress.AspNetCore.Dashboard" Version="18.2.3" />
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="18.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.6" />
