--- a/backend/Backend/appsettings.json
+++ b/backend/Backend/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "NWindConnectionString": "XpoProvider=SQLite;Data Source=Data/nwind.db"
   }
 }
