working config except dashboard query builder

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "devexpress-reporting-angular": "^18.2.3",
     "devextreme": "^18.2.3",
     "devextreme-angular": "^18.2.3",
+    "jquery": "^3.1.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
