--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,66 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "abp-ng2-module": "^3.2.1",
+    "abp-web-resources": "^3.8.4",
+    "angular-resizable-element": "^3.2.2",
+    "angular2-counto": "^1.2.3",
+    "block-ui": "^2.70.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-daterangepicker": "^2.1.25",
+    "bootstrap-select": "^1.12.2",
+    "bootstrap-switch": "^3.3.4",
+    "codemirror": "^5.28.0",
     "core-js": "^2.5.4",
+    "datamaps": "^0.5.8",
     "devexpress-dashboard": "^18.2.3",
     "devexpress-reporting-angular": "^18.2.3",
     "devextreme": "^18.2.3",
     "devextreme-angular": "^18.2.3",
+    "dragula": "^3.7.2",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "famfamfam-flags": "^1.0.0",
+    "flot": "^0.8.0-alpha",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "jquery-migrate": "^3.0.0",
+    "jquery-slimscroll": "^1.3.8",
+    "jquery-sparkline": "^2.4.0",
+    "jquery-ui-dist": "^1.12.1",
+    "jquery.flot.tooltip": "^0.9.0",
+    "jquery.inputmask": "^3.3.4",
+    "jquery.uniform": "^4.2.0",
+    "js-cookie": "^2.1.4",
+    "jstree": "^3.3.4",
+    "localforage": "^1.5.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
+    "morris.js": "^0.5.0",
+    "ng-recaptcha": "^3.0.0",
+    "ng2-codemirror": "^1.1.3",
+    "ng2-dnd": "^4.2.0",
+    "ng2-dragula": "^1.5.0",
+    "ng2-file-upload": "^1.2.1",
+    "ng2modules-easypiechart": "^0.0.4",
+    "ng2modules-flot": "^0.0.1",
+    "ngx-bootstrap": "^3.1.1",
+    "primeng": "4.2.0",
+    "push.js": "1.0.4",
+    "quill": "^1.3.0",
+    "raphael": "^2.2.7",
+    "rtl-detect": "^1.0.0",
     "rxjs": "~6.2.0",
+    "signalr": "^2.2.1",
+    "simple-line-icons": "^2.4.1",
+    "spin.js": "^2.3.2",
+    "sweetalert": "^1.1.3",
+    "tether": "^1.4.0",
+    "timeago": "^1.6.1",
+    "toastr": "^2.1.2",
+    "ts-helpers": "^1.1.2",
+    "typescript": "~2.9.2",
+    "waypoints": "^4.0.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
