--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.1.10",
-    "@angular/cdk": "6.4.7",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
-    "@angular/material": "6.4.7",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -34,16 +32,16 @@
     "codemirror": "^5.28.0",
     "core-js": "^2.5.4",
     "datamaps": "^0.5.8",
-    "devexpress-dashboard": "^18.2.3",
-    "devexpress-reporting-angular": "^18.2.3",
-    "devextreme": "^18.2.3",
-    "devextreme-angular": "^18.2.3",
+    "devexpress-dashboard": "~18.2.3",
+    "devexpress-reporting-angular": "~18.2.3",
+    "devextreme": "~18.2.3",
+    "devextreme-angular": "~18.2.3",
     "dragula": "^3.7.2",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "famfamfam-flags": "^1.0.0",
     "flot": "^0.8.0-alpha",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.0",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sparkline": "^2.4.0",
@@ -71,7 +69,8 @@
     "quill": "^1.3.0",
     "raphael": "^2.2.7",
     "rtl-detect": "^1.0.0",
-    "rxjs": "~6.2.0",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "^6.3.3",
     "signalr": "^2.2.1",
     "simple-line-icons": "^2.4.1",
     "spin.js": "^2.3.2",
@@ -82,27 +81,44 @@
     "ts-helpers": "^1.1.2",
     "typescript": "~2.9.2",
     "waypoints": "^4.0.1",
-    "zone.js": "~0.8.26"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "~6.2.2",
     "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
+    "@angularclass/hmr": "^2.1.3",
+    "@angularclass/hmr-loader": "^3.0.4",
+    "@types/bootstrap": "^3.3.33",
+    "@types/grecaptcha": "^2.0.31",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.2.12",
+    "@types/jquery.blockui": "0.0.28",
+    "@types/jstree": "^3.3.34",
+    "@types/lodash": "^4.14.62",
+    "@types/moment": "^2.13.0",
+    "@types/moment-timezone": "^0.2.34",
+    "@types/morris.js": "^0.5.6",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+    "@types/signalr": "^2.2.33",
+    "@types/tether": "^1.4.2",
+    "@types/toastr": "^2.1.33",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "nswag": "11.19.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "tslint": "~5.11.0"
   }
 }
